_generated-doc/2.7/config/quarkus-jaeger-jaeger-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-jaeger-jaeger-config_configuration]]link:#quarkus-jaeger-jaeger-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.endpoint]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.endpoint[quarkus.jaeger.endpoint]`

[.description]
--
The traces endpoint, in case the client should connect directly to the Collector, like http://jaeger-collector:14268/api/traces
--|link:https://docs.oracle.com/javase/8/docs/api/java/net/URI.html[URI]
 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.auth-token]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.auth-token[quarkus.jaeger.auth-token]`

[.description]
--
Authentication Token to send as "Bearer" to the endpoint
--|string 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.user]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.user[quarkus.jaeger.user]`

[.description]
--
Username to send as part of "Basic" authentication to the endpoint
--|string 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.password]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.password[quarkus.jaeger.password]`

[.description]
--
Password to send as part of "Basic" authentication to the endpoint
--|string 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.agent-host-port]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.agent-host-port[quarkus.jaeger.agent-host-port]`

[.description]
--
The hostname and port for communicating with agent via UDP
--|host:port 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.reporter-log-spans]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.reporter-log-spans[quarkus.jaeger.reporter-log-spans]`

[.description]
--
Whether the reporter should also log the spans
--|boolean 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.reporter-max-queue-size]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.reporter-max-queue-size[quarkus.jaeger.reporter-max-queue-size]`

[.description]
--
The reporter's maximum queue size
--|int 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.reporter-flush-interval]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.reporter-flush-interval[quarkus.jaeger.reporter-flush-interval]`

[.description]
--
The reporter's flush interval
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.sampler-type]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.sampler-type[quarkus.jaeger.sampler-type]`

[.description]
--
The sampler type (const, probabilistic, ratelimiting or remote)
--|string 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.sampler-param]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.sampler-param[quarkus.jaeger.sampler-param]`

[.description]
--
The sampler parameter (number)
--|link:https://docs.oracle.com/javase/8/docs/api/java/math/BigDecimal.html[BigDecimal]
 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.sampler-manager-host-port]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.sampler-manager-host-port[quarkus.jaeger.sampler-manager-host-port]`

[.description]
--
The host name and port when using the remote controlled sampler
--|host:port 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.service-name]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.service-name[quarkus.jaeger.service-name]`

[.description]
--
The service name
--|string 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.tags]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.tags[quarkus.jaeger.tags]`

[.description]
--
A comma separated list of name = value tracer level tags, which get added to all reported spans. The value can also refer to an environment variable using the format $++{++envVarName:default++}++, where the :default is optional, and identifies a value to be used if the environment variable cannot be found
--|string 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.propagation]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.propagation[quarkus.jaeger.propagation]`

[.description]
--
Comma separated list of formats to use for propagating the trace context. Defaults to the standard Jaeger format. Valid values are jaeger and b3
--|string 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.sender-factory]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.sender-factory[quarkus.jaeger.sender-factory]`

[.description]
--
The sender factory class name
--|string 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.log-trace-context]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.log-trace-context[quarkus.jaeger.log-trace-context]`

[.description]
--
Whether the trace context should be logged.
--|boolean 
|`true`


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.disable-tracer-registration]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.disable-tracer-registration[quarkus.jaeger.disable-tracer-registration]`

[.description]
--
Whether or not the registration of tracer as the global tracer should be disabled. This setting should only be turned on in tests that need to install a mock tracer.
--|boolean 
|`false`

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
