_generated-doc/3.2/config/quarkus-jaeger-jaeger-config.adoc

:summaryTableId: quarkus-jaeger-jaeger-config
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-jaeger-jaeger-config_configuration]]link:#quarkus-jaeger-jaeger-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.endpoint]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.endpoint[quarkus.jaeger.endpoint]`


[.description]
--
The traces endpoint, in case the client should connect directly to the Collector, like http://jaeger-collector:14268/api/traces

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JAEGER_ENDPOINT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JAEGER_ENDPOINT+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/net/URI.html[URI]
 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.auth-token]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.auth-token[quarkus.jaeger.auth-token]`


[.description]
--
Authentication Token to send as "Bearer" to the endpoint

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JAEGER_AUTH_TOKEN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JAEGER_AUTH_TOKEN+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.user]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.user[quarkus.jaeger.user]`


[.description]
--
Username to send as part of "Basic" authentication to the endpoint

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JAEGER_USER+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JAEGER_USER+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.password]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.password[quarkus.jaeger.password]`


[.description]
--
Password to send as part of "Basic" authentication to the endpoint

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JAEGER_PASSWORD+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JAEGER_PASSWORD+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.agent-host-port]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.agent-host-port[quarkus.jaeger.agent-host-port]`


[.description]
--
The hostname and port for communicating with agent via UDP

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JAEGER_AGENT_HOST_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JAEGER_AGENT_HOST_PORT+++`
endif::add-copy-button-to-env-var[]
--|host:port 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.reporter-log-spans]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.reporter-log-spans[quarkus.jaeger.reporter-log-spans]`


[.description]
--
Whether the reporter should also log the spans

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JAEGER_REPORTER_LOG_SPANS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JAEGER_REPORTER_LOG_SPANS+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.reporter-max-queue-size]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.reporter-max-queue-size[quarkus.jaeger.reporter-max-queue-size]`


[.description]
--
The reporter's maximum queue size

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JAEGER_REPORTER_MAX_QUEUE_SIZE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JAEGER_REPORTER_MAX_QUEUE_SIZE+++`
endif::add-copy-button-to-env-var[]
--|int 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.reporter-flush-interval]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.reporter-flush-interval[quarkus.jaeger.reporter-flush-interval]`


[.description]
--
The reporter's flush interval

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JAEGER_REPORTER_FLUSH_INTERVAL+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JAEGER_REPORTER_FLUSH_INTERVAL+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor-{summaryTableId}[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.sampler-type]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.sampler-type[quarkus.jaeger.sampler-type]`


[.description]
--
The sampler type (const, probabilistic, ratelimiting or remote)

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JAEGER_SAMPLER_TYPE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JAEGER_SAMPLER_TYPE+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.sampler-param]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.sampler-param[quarkus.jaeger.sampler-param]`


[.description]
--
The sampler parameter (number)

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JAEGER_SAMPLER_PARAM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JAEGER_SAMPLER_PARAM+++`
endif::add-copy-button-to-env-var[]
--|link:https://docs.oracle.com/javase/8/docs/api/java/math/BigDecimal.html[BigDecimal]
 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.sampler-manager-host-port]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.sampler-manager-host-port[quarkus.jaeger.sampler-manager-host-port]`


[.description]
--
The host name and port when using the remote controlled sampler

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JAEGER_SAMPLER_MANAGER_HOST_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JAEGER_SAMPLER_MANAGER_HOST_PORT+++`
endif::add-copy-button-to-env-var[]
--|host:port 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.service-name]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.service-name[quarkus.jaeger.service-name]`


[.description]
--
The service name

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JAEGER_SERVICE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JAEGER_SERVICE_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.tags]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.tags[quarkus.jaeger.tags]`


[.description]
--
A comma separated list of name = value tracer level tags, which get added to all reported spans. The value can also refer to an environment variable using the format $++{++envVarName:default++}++, where the :default is optional, and identifies a value to be used if the environment variable cannot be found

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JAEGER_TAGS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JAEGER_TAGS+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.propagation]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.propagation[quarkus.jaeger.propagation]`


[.description]
--
Comma separated list of formats to use for propagating the trace context. Defaults to the standard Jaeger format. Valid values are jaeger and b3

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JAEGER_PROPAGATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JAEGER_PROPAGATION+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.sender-factory]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.sender-factory[quarkus.jaeger.sender-factory]`


[.description]
--
The sender factory class name

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JAEGER_SENDER_FACTORY+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JAEGER_SENDER_FACTORY+++`
endif::add-copy-button-to-env-var[]
--|string 
|


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.log-trace-context]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.log-trace-context[quarkus.jaeger.log-trace-context]`


[.description]
--
Whether the trace context should be logged.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JAEGER_LOG_TRACE_CONTEXT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JAEGER_LOG_TRACE_CONTEXT+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a| [[quarkus-jaeger-jaeger-config_quarkus.jaeger.disable-tracer-registration]]`link:#quarkus-jaeger-jaeger-config_quarkus.jaeger.disable-tracer-registration[quarkus.jaeger.disable-tracer-registration]`


[.description]
--
Whether the registration of tracer as the global tracer should be disabled. This setting should only be turned on in tests that need to install a mock tracer.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_JAEGER_DISABLE_TRACER_REGISTRATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_JAEGER_DISABLE_TRACER_REGISTRATION+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`

|===
ifndef::no-duration-note[]
[NOTE]
[id='duration-note-anchor-{summaryTableId}']
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/11/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() javadoc] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
